--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -247,7 +247,7 @@ button{
 
 
 
-/* =================menu================= */
+/* =================search================= */
 
 
 #searchselect{
@@ -394,4 +394,205 @@ button{
 
 #delete p {
     margin-top: 20px;
+}
+
+
+/* =================search================= */
+
+#search_test p{
+	width:15%;
+    margin: 15px;
+    margin-top: 20px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search_test{
+    height: 20%;
+}
+
+#search_subject{
+    width: 100%;
+    height: 95%;
+    display: flex;
+    padding: 10px;
+    padding-left: 0px;
+}
+
+#search_subject_input{
+    width: 100%;
+}
+
+#search_subject form {
+    display: flex;
+    height: 65%;
+}
+
+#search_subject_input button{
+    background-color: #7e7e7e;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search_subject_input select{
+    width: 30%;
+    margin-right: 20px;
+}
+
+#search_subject_input label {
+    padding-right : calc(100% / 4.5) ;
+}
+
+
+#search_sum{
+    margin: 10px;
+}
+
+#search_result table{
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 15px;
+}
+
+#search_result table tr th{
+    width: calc(100% / 6);
+    text-align: left;
+    border-bottom: solid 1px rgb(108, 108, 108);
+}
+
+
+#search_result table tr td{
+    width: calc(100% / 6);
+    border-bottom: solid 1px rgb(108, 108, 108);
+}
+
+
+#search_student_input button{
+    background-color: #7e7e7e;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search_student_input select{
+    width: 30%;
+    margin-right: 20px;
+}
+
+#search_student_input label{
+    margin-right: 15%;
+}
+
+#search_student_input label {
+    margin-right: 15%;
+    margin-left: 3%;
+}
+
+#search_student p{
+	width:15%;
+    margin: 15px;
+    margin-right: 30px;
+    margin-left: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search_student{
+    width: 100%;
+    height: 95%;
+    display: flex;
+    padding: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+}
+
+#search_student_input{
+    width: 100%;
+}
+
+#search_student_input{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+#search_student_input button{
+    background-color: #7e7e7e;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 3%;
+    margin-left:20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#text_input{
+    width: 80%;
+}
+
+#text_input form input{
+    width: 100%;
+    height: 10%;
+    margin-right: 20px;
+}
+
+#text_input label{
+    width: 30%;
+    margin-right: 15%;
+    margin-left: 0px;
+}
+
+#test_list_student{
+    padding-top: 0px;
+    border: solid 1px #333;
+    border-radius: 3px;
+}
+
+#search_subject{
+    border-bottom: solid 1px #333;
+}
+
+#test_list_student{
+    margin-bottom: 20px;
+}
+
+
+#search_test_input button{
+    background-color: #7e7e7e;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search_test_input{
+    width: 100%;
+    height: 80%;
+    padding: 5px;
+    border: solid 1px #333;
+    border-radius: 10px;
+}
+
+#search_test_input select{
+    width: 30%;
+    height: 50%;
+    margin-right: 20px;
+}
+
+#search_test_input label {
+    padding-right : calc(100% / 6.5) ;
 }
