--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -100,8 +100,6 @@ button:hover{
     margin-right:10px ;
 }
 
-
-
 /* =================sidebar================= */
 
 .crumb{
@@ -596,3 +594,11 @@ button{
 #search_test_input label {
     padding-right : calc(100% / 6.5) ;
 }
+
+
+.error_message {
+    color: orange;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
