--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -160,8 +160,14 @@ footer{
 
 /* =================login================= */
 
+#contents_login {
+    width: 80%;
+}
+
 #login{
     text-align: center;
+    margin-left: 30%;
+    margin-right: 5%;
 }
 
 h2{
@@ -170,7 +176,7 @@ h2{
 }
 
 input {
-    width: 70%;
+    width: 100%;
     padding: 8px;
     border: 1px solid #dcdcdc;
     border-radius: 3px;
@@ -207,6 +213,25 @@ button{
     color: white;
     margin-top: 10px;
 
+}
+
+#logout_ p{
+    width: 100%;
+    background-color: #5a8b32;
+    text-align: center;
+    color: white;
+    margin-top: 10px;
+
+}
+
+#logout_ a{
+	text-align: left;
+}
+
+#logout_{
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 5%;
 }
 
 
